# DARP

./: .gitattributes  .gitignore  README-EN.md  README.md  darp-rddl-subset.ebnf  pyproject.toml  requirements.txt
docs/: paper_symbols_table.md
examples/benchmarks/: README.md
examples/durations/: tiny_grid.yaml
examples/rddl/: factored_door_domain.rddl  factored_door_instance.rddl  tiny_grid_domain.rddl  tiny_grid_instance.rddl
experiments/inputs/durations/: fixed_1.yaml  tiny_grid.yaml  tiny_grid_gaussian.yaml
experiments/inputs/rddl/: tiny_grid_domain.rddl
experiments/latex/: preview_summary_table.tex  summary_table.tex
experiments/reports/latex/: preview_summary_table.tex  sample-summary.csv  summary_table.tex
scripts/: darp_prost_compare.py  experiment_visualizer.py  install_linux_deps.sh  run_benchmark_suite.py  tiny_grid_fixed_1.py
src/darp/: __init__.py  __main__.py  duration.py  loaded.py  loader.py  online.py  planner.py  runtime.py  session.py
src/darp/adapter/: __init__.py  exact.py  grounded.py  loader.py  problem.py  runtime.py
src/darp/core/: __init__.py  duration.py  problem.py  (+1 more)
tests/: test_and_or_tree.py  test_basic_rddl_parser.py  test_compiler_simulator_interaction.py  test_darp_entrypoint.py  test_duration_sidecar.py  test_exact_kernel.py  test_gurobi_ilp.py  test_local_simulator.py  test_online.py  test_phase7_search.py  test_pyrddlgym_runtime.py  test_rao_star_baseline.py  test_rddl_compiler.py  test_rddl_expressions.py  test_rddl_frontends.py  test_rddl_grounding.py  test_rddl_loader.py
tools/: install_linux_deps.sh
(+39 files in other folders)
