[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "darp"
version = "0.1.0"
description = "Durative Action RDDL Planner research prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DARP contributors" }
]
dependencies = ["numpy>=1.24", "pyRDDLGym>=2.0"]

[project.scripts]
darp = "darp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
gurobi = ["gurobipy>=10.0"]

[tool.setuptools.packages.find]
where = ["src"]
